--- a/menu.html
+++ b/menu.html
@@ -8,7 +8,7 @@
     </a>
     <div class="menu-items flex-row-center flex-item">
       <a href="index.html" class="menu-index">Home</a>
-      <a href="widgets.html" class="menu-widget">Widgets</a>
+      <a href="widgets.html" class="menu-widget">Project idea</a>
       <a href="embedding.html" class="menu-embedding">Results</a>
       <a href="https://github.com/yenchiah/project-website-template">About us</a>
     </div>
