--- a/index.html
+++ b/index.html
@@ -35,13 +35,15 @@
           <div class="flex-item flex-column">
             <p class="text text-large">
               <a target="_blank" href="javascript:void(0)">Author 1</a>, Yiga Gilbert<br>
+              <a target="_blank" href="javascript:void(0)">moolibrian.github.io</a> Mooli Brian<br>
+              <a target="_blank" href="javascript:void(0)">Deo111.github.io</a>, Kyagulanyi Deo<br>
+              <a target="_blank" href="javascript:void(0)">132kibsdanger.github.io</a> Kibirango Kennan<br>
               <a target="_blank" href="javascript:void(0)">emmywilliams.github.io</a> Kayanja Emmy William<br>
-              <a target="_blank" href="javascript:void(0)">Author 3</a>, Kyagulanyi Deo<br>
-              <a target="_blank" href="javascript:void(0)">Laboratory</a><br>
-              <a target="_blank" href="javascript:void(0)">Institute</a><br>
-              <a target="_blank" href="javascript:void(0)">Organization</a><br>
+              <a target="_blank" href="javascript:void(0)">https://www.mak.ac.ug/</a><br>
+              <a target="_blank" href="javascript:void(0)">COCIS</a><br>
+              <a target="_blank" href="javascript:void(0)">Group 11</a><br>
               <a target="_blank" href="javascript:void(0)">Street Address</a><br>
-              <a target="_blank" href="javascript:void(0)">City, State, Country</a>
+              <a target="_blank" href="javascript:void(0)">Kampala, Central, Uganda</a>
             </p>
           </div>
         </div>
