--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
           </div>
           <div class="flex-item flex-column">
             <p class="text text-large">
-              <a target="_blank" href="javascript:void(0)">Author 1</a>, Yiga Gilbert<br>
-              <a target="_blank" href="javascript:void(0)">moolibrian.github.io</a> Mooli Brian<br>
-              <a target="_blank" href="javascript:void(0)">Deo111.github.io</a>, Kyagulanyi Deo<br>
-              <a target="_blank" href="javascript:void(0)">132kibsdanger.github.io</a> Kibirango Kennan<br>
-              <a target="_blank" href="javascript:void(0)">emmywilliams.github.io</a> Kayanja Emmy William<br>
-              <a target="_blank" href="javascript:void(0)">https://www.mak.ac.ug/</a><br>
+              <a target="_blank" href="vigidaiz15@gmail.com">email</a>, Yiga Gilbert<br>
+              <a target="_blank" href="moolibrian.github.io">github</a> Mooli Brian<br>
+              <a target="_blank" href="kyagulanyideo92@gmail.com">email</a> Kyagulanyi Deo<br>
+              <a target="_blank" href="132kibsdanger.github.io">github</a> Kibirango Kennan<br>
+              <a target="_blank" href="emmywilliams.github.io">github</a> Kayanja Emmy William<br>
+              <a target="_blank" href="www.mak.ac.ug">Makerere university</a><br>
               <a target="_blank" href="javascript:void(0)">COCIS</a><br>
               <a target="_blank" href="javascript:void(0)">Group 11</a><br>
               <a target="_blank" href="javascript:void(0)">Street Address</a><br>
