--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
               <a target="_blank" href="132kibsdanger.github.io">github</a> Kibirango Kennan<br>
               <a target="_blank" href="emmywilliams.github.io">github</a> Kayanja Emmy William<br>
               <a target="_blank" href="www.mak.ac.ug">Makerere university</a><br>
-              <a target="_blank" href="cit.mak.ac.ug">School of Computing and Informatics Technology</a><br>
-              <a target="_blank" href="https://cis.mak.ac.ug/">COCIS</a><br>
+              <a target="_blank" href="cit.mak.ac.ug">School of Computing & Informatics Technology</a><br>            
               <a target="_blank" href="emmywilliams.github.io">Group 11</a><br>
               <a target="_blank" href="www.mak.ac.ug">Kampala, Central, Uganda</a>
             </p>
