--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <a target="_blank" href="moolibrian.github.io">github</a> Mooli Brian<br>
               <a target="_blank" href="kyagulanyideo92@gmail.com">email</a> Kyagulanyi Deo<br>
               <a target="_blank" href="132kibsdanger.github.io">github</a> Kibirango Kennan<br>
-              <a target="_blank" href="emmywilliams.github.io">github</a> Kayanja Emmy William<br>
+              <a target="_blank" href="https://github.com/emmywilliams">github</a> Kayanja Emmy William<br>
               <a target="_blank" href="www.mak.ac.ug">Makerere university</a><br>
               <a target="_blank" href="cit.mak.ac.ug">School of Computing & Informatics Technology</a><br>            
               <a target="_blank" href="emmywilliams.github.io">Group 11</a><br>
