--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
           </div>
           <div class="flex-item flex-column">
             <p class="text text-large">
-              <a target="_blank" href="vigidaiz15@gmail.com">email</a>, Yiga Gilbert<br>
-              <a target="_blank" href="moolibrian.github.io">github</a> Mooli Brian<br>
-              <a target="_blank" href="kyagulanyideo92@gmail.com">email</a> Kyagulanyi Deo<br>
-              <a target="_blank" href="132kibsdanger.github.io">github</a> Kibirango Kennan<br>
+              <a target="_blank" href="https://github.com/yigagilbert">email</a>, Yiga Gilbert<br>
+              <a target="_blank" href="https://github.com/moolibrian">github</a> Mooli Brian<br>
+              <a target="_blank" href="https://github.com/Deo111">email</a> Kyagulanyi Deo<br>
+              <a target="_blank" href="https://github.com/132kibsdanger">github</a> Kibirango Kennan<br>
               <a target="_blank" href="https://github.com/emmywilliams">github</a> Kayanja Emmy William<br>
               <a target="_blank" href="www.mak.ac.ug">Makerere university</a><br>
               <a target="_blank" href="cit.mak.ac.ug">School of Computing & Informatics Technology</a><br>            
