--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </p>
           </div>
         </div>
-        <div class="flex-row">
+        /*<div class="flex-row">
           <div class="flex-item flex-column">
             <p class="text add-top-margin">
               Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel
@@ -56,26 +56,24 @@
               sapien ut libero venenatis faucibus. Nullam quis ante.
             </p>
           </div>
-        </div>
+        </div>*/
         <!--End Intro-->
         <!-------------------------------------------------------------------------------------------->
         <!--Start Text Only-->
         <div class="flex-row">
           <div class="flex-item flex-column">
-            <h2 class="add-top-margin">Text Only</h2>
+              <h2 class="add-top-margin">Problem</h2>
             <hr>
             <p class="text">
-              Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie, musica,
-              sport etc, litot Europa usa li sam vocabular. Li lingues differe solmen in li grammatica, li pronunciation e
-              li plu commun vocabules. Omnicos directe al desirabilite de un nov lingua franca: On refusa continuar payar
-              custosi traductores. At solmen va esser.
+              Locating the nearest garage, spare part centers, and mechanics in case of emergencies has been one of 
+              the greatest challenges over decades in case of a mechanical breakdown. 
             </p>
             <p class="text">
-              Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur,
-              vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? At vero eos et accusamus et iusto odio dignissimos
-              ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias
-              excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia
-              animi, id est laborum et dolorum fuga.
+              According to a survey carried out by Group 11 members across the country, most drivers and boda-boda 
+              riders always get stuck on the way to their destinations due to failure or delay to get mechanical 
+              services. This leads to a number of inconveniences such as missing very important appointments, 
+              increased damage in case one tries to forcefully move the vehicle or a motorcycle to reach the nearest 
+              garage, accidents where people lose their dear lives, to mention but a few. 
             </p>
             <h3>Break Long URL</h3>
             <p class="text">
