--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </p>
           </div>
         </div>
-        /*<div class="flex-row">
+        <! ––<div class="flex-row">
           <div class="flex-item flex-column">
             <p class="text add-top-margin">
               Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel
@@ -56,7 +56,7 @@
               sapien ut libero venenatis faucibus. Nullam quis ante.
             </p>
           </div>
-        </div>*/
+        </div> -->
         <!--End Intro-->
         <!-------------------------------------------------------------------------------------------->
         <!--Start Text Only-->
