--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 
 <head>
   <title>MobiGarage</title>
@@ -48,6 +48,7 @@
         </div>
         <div class="flex-row">
           <div class="flex-item flex-column">
+            
             <p class="text add-top-margin">
               Locating the nearest garage, spare part centers, and mechanics in case of emergencies has been one of 
               the greatest challenges over decades in case of a mechanical breakdown.
