--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
           <div class="flex-item flex-column">
             
             <p class="text add-top-margin">
+              <h2 class="add-top-margin">Problem</h2>
               Locating the nearest garage, spare part centers, and mechanics in case of emergencies has been one of 
               the greatest challenges over decades in case of a mechanical breakdown.
             </p>
