--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en-US" class="no-touch">
 
 <head>
   <title>MobiGarage</title>
@@ -21,8 +21,9 @@
   </style>
 </head>
 
-<body>
+<body style="background-color: rgb(188,142, 82)">
   <div class="menu-container"></div>
+  <img height="500" class="image" src="img/mechanic.jpg" alt="network error"/>
   <div class="content-container">
     <div class="content">
       <div class="content-table flex-column">
@@ -30,7 +31,7 @@
         <!--Start Intro-->
         <div class="flex-row">
           <div class="flex-item flex-column">
-            <img class="image" src="img/dummay-img.jpg">
+            
           </div>
           <div class="flex-item flex-column">
             <p class="text text-large">
