--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <div class="content">
       <div class="content-table flex-column">
         <!-------------------------------------------------------------------------------------------->
+        <h1 class="add-top-margin">AutoSpar</h1>
         <!--Start Intro-->
         <div class="flex-row">
           <div class="flex-item flex-column">
