--- a/widgets.html
+++ b/widgets.html
@@ -377,7 +377,7 @@
         <div class="flex-row">
           <div class="flex-item flex-item-stretch flex-column">
             <p class="text text-small text-italic">
-              Credits: <span class="highlight-text">Organization One</span>: Author One and Author Two / <span class="highlight-text">Organization Two</span>: Author Three and Author Four
+               Credits: <span class="highlight-text">Yiga Gilbert, Emmy William Kayanja, Mooli Brian, Kibirango Kennan and Kyagulanyi Deo</span> for the insights, hard work and making this project possible.
             </p>
           </div>
         </div>
