--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
         </div>
         <div class="flex-row">
           <div class="flex-item flex-item-stretch flex-column">
-            <img class="image max-width-400" src="img/dummay-img.png">
+            <img class="image max-width-400" src="img/gil.jpg">
           </div>
           <div class="flex-item flex-item-stretch-4 flex-column">
             <p class="text">
@@ -793,7 +793,7 @@
         </div>
         <div class="flex-row">
           <div class="flex-item flex-item-stretch flex-column">
-            <img class="image max-width-400" src="img/dummay-img.png">
+            <img class="image max-width-400" src="img/psh.jpg">
           </div>
           <div class="flex-item flex-item-stretch-4 flex-column">
             <p class="text">
@@ -806,7 +806,7 @@
         </div>
       <div class="flex-row">
           <div class="flex-item flex-item-stretch flex-column">
-            <img class="image max-width-400" src="img/dummay-img.png">
+            <img class="image max-width-400" src="img/chief.jpg">
           </div>
           <div class="flex-item flex-item-stretch-4 flex-column">
             <p class="text">
@@ -819,7 +819,7 @@
         </div>
       <div class="flex-row">
           <div class="flex-item flex-item-stretch flex-column">
-            <img class="image max-width-400" src="img/dummay-img.png">
+            <img class="image max-width-400" src="img/kk.jpg">
           </div>
           <div class="flex-item flex-item-stretch-4 flex-column">
             <p class="text">
@@ -832,7 +832,7 @@
         </div>
         <div class="flex-row">
           <div class="flex-item flex-item-stretch flex-column">
-            <img class="image max-width-400" src="img/dummay-img.png">
+            <img class="image max-width-400" src="img/Deo.jpg">
           </div>
           <div class="flex-item flex-item-stretch-4 flex-column">
             <p class="text">
