--- a/index.html
+++ b/index.html
@@ -836,7 +836,7 @@
           </div>
           <div class="flex-item flex-item-stretch-4 flex-column">
             <p class="text">
-              <a class="highlight-text" href="javascript:void(0)">Kyagulanyi Deo</a><br>
+              <a class="highlight-text" >Kyagulanyi Deo</a><br>
               Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel
               augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget
               condimentum rhoncus, sem quam semper libero, sit amet.
