--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@
         <!--Start List of Projects-->
         <div class="flex-row">
           <div class="flex-item flex-column full-width">
-            <h2 class="add-top-margin">List of Projects</h2>
+            <h2 class="add-top-margin">Members who participated in this project</h2>
             <hr>
           </div>
         </div>
@@ -784,7 +784,7 @@
           </div>
           <div class="flex-item flex-item-stretch-4 flex-column">
             <p class="text">
-              <a class="highlight-text" href="javascript:void(0)">Yiga Gilbert</a><br>
+              <a class="highlight-text">Yiga Gilbert</a><br>
               Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel
               augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget
               condimentum rhoncus, sem quam semper libero, sit amet.
@@ -797,7 +797,7 @@
           </div>
           <div class="flex-item flex-item-stretch-4 flex-column">
             <p class="text">
-              <a class="highlight-text" href="javascript:void(0)">Kayanja Emmy William</a><br>
+              <a class="highlight-text">Kayanja Emmy William</a><br>
               Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel
               augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget
               condimentum rhoncus, sem quam semper libero, sit amet.
@@ -810,7 +810,7 @@
           </div>
           <div class="flex-item flex-item-stretch-4 flex-column">
             <p class="text">
-              <a class="highlight-text" href="javascript:void(0)">Mooli Brian</a><br>
+              <a class="highlight-text" >Mooli Brian</a><br>
               Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel
               augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget
               condimentum rhoncus, sem quam semper libero, sit amet.
@@ -837,9 +837,10 @@
           <div class="flex-item flex-item-stretch-4 flex-column">
             <p class="text">
               <a class="highlight-text" >Kyagulanyi Deo</a><br>
-              Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel
-              augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget
-              condimentum rhoncus, sem quam semper libero, sit amet.
+              Student at the college of Computing and Information Technology, Makerere University Kampala Uganda pursuing a bachelors' degree in computer science.
+            </p>
+            <p class="text">
+              Contacts:
             </p>
           </div>
         </div>
