--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
               Student at the college of Computing and Information Technology, Makerere University Kampala Uganda pursuing a bachelors' degree in computer science.
             </p>
             <p class="text">
-              Contacts:
+              Contacts: <a class="highlight-text" href="https://github.com/132kibsdanger">Github</a> <a class="highlight-text" href="javascript:void(0)">facebook</a> <a class="highlight-text" href="javascript:void(0)">twitter</a>
             </p>
           </div>
         </div>
