--- a/index.html
+++ b/index.html
@@ -785,9 +785,10 @@
           <div class="flex-item flex-item-stretch-4 flex-column">
             <p class="text">
               <a class="highlight-text">Yiga Gilbert</a><br>
-              Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel
-              augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget
-              condimentum rhoncus, sem quam semper libero, sit amet.
+              Student at the college of Computing and Information Technology, Makerere University Kampala Uganda pursuing a bachelors' degree in computer science.
+            </p>
+            <p class="text">
+              Contacts: <a href="https://github.com/yigagilbert">Github</a> <a class="highlight-text" href="https://www.facebook.com/emmy.williamz/">facebook</a> <a class="highlight-text" href="javascript:void(0)">twitter</a>
             </p>
           </div>
         </div>
@@ -798,9 +799,10 @@
           <div class="flex-item flex-item-stretch-4 flex-column">
             <p class="text">
               <a class="highlight-text">Kayanja Emmy William</a><br>
-              Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel
-              augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget
-              condimentum rhoncus, sem quam semper libero, sit amet.
+              Student at the college of Computing and Information Technology, Makerere University Kampala Uganda pursuing a bachelors' degree in computer science.
+            </p>
+            <p class="text">
+              Contacts: <a href="https://github.com/emmywilliams">Github</a> <a class="highlight-text" href="https://www.facebook.com/emmy.williamz/">facebook</a> <a class="highlight-text" href="javascript:void(0)">twitter</a>
             </p>
           </div>
         </div>
@@ -811,9 +813,10 @@
           <div class="flex-item flex-item-stretch-4 flex-column">
             <p class="text">
               <a class="highlight-text" >Mooli Brian</a><br>
-              Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel
-              augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget
-              condimentum rhoncus, sem quam semper libero, sit amet.
+              Student at the college of Computing and Information Technology, Makerere University Kampala Uganda pursuing a bachelors' degree in computer science.
+            </p>
+            <p class="text">
+              Contacts: <a href="https://github.com/moolibrian">Github</a> <a class="highlight-text" href="https://www.facebook.com/emmy.williamz/">facebook</a> <a class="highlight-text" href="javascript:void(0)">twitter</a>
             </p>
           </div>
         </div>
@@ -824,9 +827,10 @@
           <div class="flex-item flex-item-stretch-4 flex-column">
             <p class="text">
               <a class="highlight-text" href="javascript:void(0)">Kibirango Kennan</a><br>
-              Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel
-              augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget
-              condimentum rhoncus, sem quam semper libero, sit amet.
+              Student at the college of Computing and Information Technology, Makerere University Kampala Uganda pursuing a bachelors' degree in computer science.
+            </p>
+            <p class="text">
+              Contacts: <a href="https://github.com/132kibsdanger">Github</a> <a class="highlight-text" href="https://www.facebook.com/emmy.williamz/">facebook</a> <a class="highlight-text" href="javascript:void(0)">twitter</a>
             </p>
           </div>
         </div>
@@ -840,7 +844,7 @@
               Student at the college of Computing and Information Technology, Makerere University Kampala Uganda pursuing a bachelors' degree in computer science.
             </p>
             <p class="text">
-              Contacts: <a href="https://github.com/Deo111">Github</a> <a class="highlight-text" href="javascript:void(0)">facebook</a> <a class="highlight-text" href="javascript:void(0)">twitter</a>
+              Contacts: <a href="https://github.com/Deo111">Github</a> <a class="highlight-text" href="https://www.facebook.com/emmy.williamz/">facebook</a> <a class="highlight-text" href="javascript:void(0)">twitter</a>
             </p>
           </div>
         </div>
