--- a/index.html
+++ b/index.html
@@ -788,7 +788,7 @@
               Student at the college of Computing and Information Technology, Makerere University Kampala Uganda pursuing a bachelors' degree in computer science.
             </p>
             <p class="text">
-              Contacts: <a href="https://github.com/yigagilbert">Github</a> <a class="highlight-text" href="https://www.facebook.com/emmy.williamz/">facebook</a> <a class="highlight-text" href="javascript:void(0)">twitter</a>
+              Contacts: <a href="https://github.com/yigagilbert">Github</a> <a href="https://www.facebook.com/emmy.williamz/">facebook</a> <a href="javascript:void(0)">twitter</a>
             </p>
           </div>
         </div>
@@ -802,7 +802,7 @@
               Student at the college of Computing and Information Technology, Makerere University Kampala Uganda pursuing a bachelors' degree in computer science.
             </p>
             <p class="text">
-              Contacts: <a href="https://github.com/emmywilliams">Github</a> <a class="highlight-text" href="https://www.facebook.com/emmy.williamz/">facebook</a> <a class="highlight-text" href="javascript:void(0)">twitter</a>
+              Contacts: <a href="https://github.com/emmywilliams">Github</a> <a href="https://www.facebook.com/emmy.williamz/">facebook</a> <a href="javascript:void(0)">twitter</a>
             </p>
           </div>
         </div>
@@ -816,7 +816,7 @@
               Student at the college of Computing and Information Technology, Makerere University Kampala Uganda pursuing a bachelors' degree in computer science.
             </p>
             <p class="text">
-              Contacts: <a href="https://github.com/moolibrian">Github</a> <a class="highlight-text" href="https://www.facebook.com/emmy.williamz/">facebook</a> <a class="highlight-text" href="javascript:void(0)">twitter</a>
+              Contacts: <a href="https://github.com/moolibrian">Github</a> <a href="https://www.facebook.com/emmy.williamz/">facebook</a> <a href="javascript:void(0)">twitter</a>
             </p>
           </div>
         </div>
@@ -830,7 +830,7 @@
               Student at the college of Computing and Information Technology, Makerere University Kampala Uganda pursuing a bachelors' degree in computer science.
             </p>
             <p class="text">
-              Contacts: <a href="https://github.com/132kibsdanger">Github</a> <a class="highlight-text" href="https://www.facebook.com/emmy.williamz/">facebook</a> <a class="highlight-text" href="javascript:void(0)">twitter</a>
+              Contacts: <a href="https://github.com/132kibsdanger">Github</a> <a href="https://www.facebook.com/emmy.williamz/">facebook</a> <a href="javascript:void(0)">twitter</a>
             </p>
           </div>
         </div>
@@ -844,7 +844,7 @@
               Student at the college of Computing and Information Technology, Makerere University Kampala Uganda pursuing a bachelors' degree in computer science.
             </p>
             <p class="text">
-              Contacts: <a href="https://github.com/Deo111">Github</a> <a class="highlight-text" href="https://www.facebook.com/emmy.williamz/">facebook</a> <a class="highlight-text" href="javascript:void(0)">twitter</a>
+              Contacts: <a href="https://github.com/Deo111">Github</a> <a href="https://www.facebook.com/emmy.williamz/">facebook</a> <a href="javascript:void(0)">twitter</a>
             </p>
           </div>
         </div>
