--- a/index.html
+++ b/index.html
@@ -761,11 +761,11 @@
         </div>
         <div class="flex-row">
           <div class="flex-item flex-column">
-            <p class="text">
-              Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel
-              augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget
-              condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit
-              vel, luctus pulvinar, hendrerit id, lorem.
+            <p class="text add-top-margin">
+              <h2 class="add-top-margin">Introduction</h2>
+              <hr>
+              Locating the nearest garage, spare part centers, and mechanics in case of emergencies has been one of 
+              the greatest challenges over decades in case of a mechanical breakdown most especially whe on transit.
             </p>
           </div>
         </div>
