--- a/index.html
+++ b/index.html
@@ -762,10 +762,9 @@
         <div class="flex-row">
           <div class="flex-item flex-column">
             <p class="text add-top-margin">
-              <h2 class="add-top-margin">Introduction</h2>
+              <h2 class="add-top-margin">Conclusion</h2>
               <hr>
-              Locating the nearest garage, spare part centers, and mechanics in case of emergencies has been one of 
-              the greatest challenges over decades in case of a mechanical breakdown most especially whe on transit.
+              In conclusion, we strongly believe that MobiGarage will be a very useful and easy-to-use tool for the drivers, workers at AutoSpar garage like the manager, mechanics and any other intrested user of this application.
             </p>
           </div>
         </div>
