--- a/menu.html
+++ b/menu.html
@@ -10,7 +10,7 @@
       <a href="index.html" class="menu-index">Home</a>
       <a href="widgets.html" class="menu-widget">Project idea</a>
       <a href="embedding.html" class="menu-embedding">Results</a>
-      <a href="https://github.com/yenchiah/project-website-template">Github</a>
+      <a href="https://github.com/emmywilliams/emmywilliams.github.io">Github</a>
     </div>
   </div>
 </div>
