--- a/widgets.html
+++ b/widgets.html
@@ -351,7 +351,7 @@
                   <li><span style="background:#6aeec1;"></span>Mango</li>
                   <li><span style="background:#ec8a27;"></span>Watermelon</li>
                 </ul>
-                <div class="legend-source">Source: <a target="_blank" href="https://github.com/yenchiah/project-website-template">GitHub</a></div>
+                <div class="legend-source">Source: <a target="_blank" href="https://github.com/emmywilliams/emmywilliams.github.io">GitHub</a></div>
               </div>
             </div>
             <div class="custom-legend noselect" style="width: 210px" id="custom-legend">
@@ -363,7 +363,7 @@
                   <li><span style="background:#6aeec1;"></span>Mango</li>
                   <li><span style="background:#ec8a27;"></span>Watermelon</li>
                 </ul>
-                <div class="legend-source">Source: <a target="_blank" href="https://github.com/yenchiah/project-website-template">GitHub</a></div>
+                <div class="legend-source">Source: <a target="_blank" href="https://github.com/emmywilliams/emmywilliams.github.io">GitHub</a></div>
               </div>
             </div>
             <p class="text">
