--- a/index.html
+++ b/index.html
@@ -758,6 +758,18 @@
           <a href="javascript:void(0)" class="flex-column"><img src="img/dummay-img.png">
             <div>Image Caption</div>
           </a>
+          </div>
+        <div class="flex-row">
+          <div class="flex-item flex-column">
+            <p class="text add-top-margin">
+              <h2 class="add-top-margin">Future plans for feature enhancement</h2>
+              <hr>
+              Here are several features that we plan to add in the application in the future.<br>
+            Making payments through the application by the help of a mobile money application.<br>
+            Connecting a number of garages to this application.
+            </p>
+          </div>
+        </div>
         </div>
         <div class="flex-row">
           <div class="flex-item flex-column">
