--- a/index.html
+++ b/index.html
@@ -765,8 +765,10 @@
               <h2 class="add-top-margin">Future plans for feature enhancement</h2>
               <hr>
               Here are several features that we plan to add in the application in the future.<br>
-            Making payments through the application by the help of a mobile money application.<br>
-            Connecting a number of garages to this application.
+            <ul>
+              <li>Making payments through the application by the help of a mobile money application.</li>
+              <li>Connecting a number of garages to this application.</li>              
+            </ul> 
             </p>
           </div>
         </div>
