--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
               Here are several features that we plan to add in the application in the future.<br>
             <ul>
               <li>Making payments through the application by the help of a mobile money application.</li>
-              <li>Connecting a number of garages to this application.</li>              
+              <li>Connecting a number of garages to this application, ect.</li>              
             </ul> 
             </p>
           </div>
