--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@
               <hr>
               Here are several features that we plan to add in the application in the future.<br>
             <ul>
-              <li>Making payments through the application by the help of a mobile money application.</li>
+              <li>Making payments through the application by the help of a mobile money API.</li>
               <li>Connecting a number of garages to this application, ect.</li>              
             </ul> 
             </p>
