--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@
             <p class="text add-top-margin">
               <h2 class="add-top-margin">Future plans for feature enhancement</h2>
               <hr>
-              Here are several features that we plan to add in the application in the future.<br>
+              Here are several features that we plan to add in the application in the future.
             <ul>
               <li>Making payments through the application by the help of a mobile money API.</li>
               <li>Connecting a number of garages to this application, ect.</li>              
