--- a/widgets.html
+++ b/widgets.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 
-<head>
+//<head>
   <title>Project Title</title>
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" media="screen" rel="stylesheet" type="text/css" />
